# octopusmq-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  clean.sh  octopus.json  octopus_bridged.json  run.sh
src/: octopus_mq.cpp
src/core/: error.hpp  event_queue.cpp  event_queue.hpp  log.cpp  log.hpp  message.cpp  message.hpp  message_pool.cpp  message_pool.hpp  message_queue.cpp  message_queue.hpp  settings.cpp  settings.hpp  topic.cpp  topic.hpp  utility.cpp  utility.hpp
src/network/: adapter.cpp  adapter.hpp  adapter_factory.cpp  adapter_factory.hpp  adapter_headers.hpp  message.cpp  message.hpp  network.cpp  network.hpp
src/network/bridge/: adapter.cpp  adapter.hpp  protocol.cpp  protocol.hpp  protocol_error.hpp  server.cpp  server.hpp
src/network/dds/: adapter.cpp  adapter.hpp
src/network/mqtt/: adapter.cpp  adapter.hpp
src/threads/: control.cpp  control.hpp
src/threads/bridge/: bridge.cpp  bridge.hpp
src/threads/dds/: message.idl  peer.cpp  peer.hpp
src/threads/mqtt/: broker.cpp  broker.hpp  client.cpp  client.hpp  config.hpp  tcp_broker.cpp  tcp_broker.hpp  tls_broker.hpp  tls_ws_broker.hpp  ws_broker.hpp
